@@ -1,18 +1,18 @@
 /*
- *  Licensed to the Apache Software Foundation (ASF) under one or more
- *  contributor license agreements.  See the NOTICE file distributed with
- *  this work for additional information regarding copyright ownership.
- *  The ASF licenses this file to You under the Apache License, Version 2.0
- *  (the "License"); you may not use this file except in compliance with
- *  the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- *  Unless required by applicable law or agreed to in writing, software
- *  distributed under the License is distributed on an "AS IS" BASIS,
- *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- *  See the License for the specific language governing permissions and
- *  limitations under the License.
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package org.apache.harmony.tests.java.lang.ref;
@@ -46,7 +46,7 @@ public class ReferenceQueueTest extends junit.framework.TestCase {
             } catch (Exception e) {}
             // store in a static so it won't be gc'ed because the jit
             // optimized it out
-            integer = new Integer(667);
+            integer = Integer.valueOf(667);
             SoftReference sr = new SoftReference(integer, rq);
             sr.enqueue();
         }
@@ -60,7 +60,7 @@ public class ReferenceQueueTest extends junit.framework.TestCase {
     public void test_poll() {
         // store in a static so it won't be gc'ed because the jit
         // optimized it out
-        b = new Boolean(true);
+        b = Boolean.valueOf(true);
         Object obj = new Object();
         String str = "Test";
 
@@ -107,7 +107,7 @@ public class ReferenceQueueTest extends junit.framework.TestCase {
     public void test_remove() {
         // store in a static so it won't be gc'ed because the jit
         // optimized it out
-        b = new Boolean(true);
+        b = Boolean.valueOf(true);
 
         SoftReference sr = new SoftReference(b, rq);
         sr.enqueue();
@@ -169,7 +169,7 @@ public class ReferenceQueueTest extends junit.framework.TestCase {
 
         Object obj = new Object();
         WeakReference wr = new WeakReference(obj, rq);
-        Boolean b = new Boolean(true);
+        Boolean b = Boolean.valueOf(true);
         SoftReference sr = new SoftReference(b, rq);
         String str = "Test";
         PhantomReference pr = new PhantomReference(str, rq);
